# hdf5matfile

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  LICENSE.txt  README.rst  Taskfile.yml  setup.cfg
pkg/: meta.yaml
src/hdf5matfile/: __init__.py  errors.py  loaders.py
src/hdf5matfile/test/: __init__.py  make_test_mats.m  test_arrays.mat  test_arrays.py  test_cells.mat  test_cells.py  test_chars.mat  test_chars.py  test_empty.mat  test_integers.mat  test_integers.py  test_structs.mat  test_structs.py
