[metadata]
name = hdf5matfile
version = 0.2.0
author = Peter Talley
author_email = peterctalley@gmail.com
description = A collection of helpful functions and doodads.
url = https://github.com/otaithleigh/hdf5matfile
license = MIT

[options]
python_requires = >=3.7
install_requires =
    h5py
    numpy >= 1.15.0
package_dir =
    =src
packages =
    hdf5matfile
